# RSS_Automation

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  RSS_Automation.py  pyproject.toml  requirements-dev.txt  settings.json
Local Scripts/: Local_Sign.ps1
RSS_Config/: anime.txt  exclude.txt  rss.txt
docs/: DEVELOPMENT.md  ROADMAP.md
docs/templates/: anime.txt  rss.txt
rss_automation/: __init__.py  archive_7z.py  cli.py  config_backup.py  config_files.py  constants.py  duplicate_tracker.py  filename_tools.py  logging_config.py  matching.py  models.py  output_writers.py  pipeline.py  rss_reader.py  settings.py  url_tools.py
scripts/: build_exe.ps1  check.ps1  git_pull_resign.ps1  install_all.ps1  install_local_git_hooks.ps1  install_tixati_rss_task.ps1  merge_develop_to_main.ps1  restore_signed_scripts.ps1  run_config_backup.ps1  run_hidden.vbs  run_rss_if_tixati_open.ps1  sign_local_scripts.ps1  uninstall_all.ps1  uninstall_tixati_rss_task.ps1  update_check_run.ps1
tests/: test_archive_7z.py  test_config_backup.py  test_config_files.py  test_duplicate_tracker.py  test_filename_tools.py  test_matching.py  test_pipeline.py  test_rss_reader.py  test_settings.py  test_settings_validation.py  test_url_tools.py
